$Id: History,v 1.5 2000-11-24 11:15:45 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    TestEm4 History file
                    --------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

25th November 2000 Steve O'Neale (tagset210)
- Update test outputs for Change in energy cut table printout (cuts not calculated) 
- After 50000 events the seeds are not the same as for Aug 28th.

June 17, 2000  John Allison  (testem4-V01-00-00)
- Updated TestEm4.out for geant4-01-01-ref-06.
     
17-01-00 - cppflag G4NOHIST to protect hbook histograms.     
12.10.99 - moved to examples/extended/electromagnetic
16.12.98 - created. Michel Maire